<resources>
    <string name="app_name">Test2Android</string>
    <string name="input_uang_masuk">Input Uang Masuk</string>
    <string name="data_penjualan">Data Penjualan</string>
    <string name="masuk_ke">Masuk Ke</string>
    <string name="perangkat">Perangkat</string>
    <string name="edit">Edit</string>
    <string name="pemilik_bisnis">Pemilik bisnis</string>
    <string name="dari">Dari</string>
    <string name="jumlah">Jumlah</string>
    <string name="rp">Rp</string>
    <string name="keterangan">Keterangan</string>
    <string name="jenis">Jenis</string>
    <string name="simpan">Simpan</string>
    <string name="cetak_ulang_struk">Cetak Ulang Struk</string>
</resources>
