<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".UangMasukActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/text_view_masuk_ke"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/masuk_ke" />

                <EditText
                    android:id="@+id/edit_text_masuk_ke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text_view_masuk_ke"
                    android:background="@drawable/rounded_corner_edittext"
                    android:hint="@string/perangkat"
                    android:padding="12dp" />

                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/custom_edit_button"
                    android:padding="12dp"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/text_view_dari"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/dari" />

                <EditText
                    android:id="@+id/edit_text_dari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text_view_dari"
                    android:background="@drawable/rounded_corner_edittext"
                    android:hint="@string/pemilik_bisnis"
                    android:padding="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/text_view_jumlah"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/jumlah" />

                <EditText
                    android:id="@+id/edit_text_jumlah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text_view_jumlah"
                    android:background="@drawable/rounded_corner_edittext"
                    android:hint="@string/rp"
                    android:inputType="number"
                    android:padding="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/text_view_keterangan"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/keterangan" />

                <EditText
                    android:id="@+id/edit_text_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text_view_keterangan"
                    android:background="@drawable/rounded_corner_edittext"
                    android:hint="Tambahan modal"
                    android:padding="12dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/text_view_jenis"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/jenis" />

                <EditText
                    android:id="@+id/edit_text_jenis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/text_view_jenis"
                    android:background="@drawable/rounded_corner_edittext"
                    android:inputType="none"
                    android:padding="12dp" />

                <ImageView
                    android:id="@+id/button_jenis"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_container">

            <TextView
                android:id="@+id/text_view_kembali"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="40dp"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="Kembali"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/button_simpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/clickable_rounded_button_background"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/simpan"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>